--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: Whyte;
+    src: url("../assets/fonts/ABCWhyte-Book.woff2") format("woff2"),
+        url("../assets/fonts/ABCWhyte-Book.woff") format("woff");
+}
+
+@layer base {
+    html {
+        font-family: Whyte, system-ui, sans-serif;
+    }
+}
