--- a/src/input.css
+++ b/src/input.css
@@ -39,3 +39,7 @@
         -webkit-text-stroke: 2px #c74993;
     }
 }
+
+.btn-outline {
+    @apply cursor-pointer flex items-center justify-center uppercase tracking-widest border-2 border-i4-pink text-i4-pink rounded-full px-10 pt-2 pb-1 hover:bg-i4-pink hover:text-white w-full sm:w-max;
+}
