--- a/src/input.css
+++ b/src/input.css
@@ -102,8 +102,7 @@
     z-index: 1;
     left: 0;
     top: 128px;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: black;
     overflow-y: hidden;
     transition: max-height 0.5s ease-in-out;
 }
